feat: add sound in collision

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script type="text/javascript" src="lib/CONFIG.js"></script>
   <script type="text/javascript" src="lib/obstacle.js"></script>
   <script type="text/javascript" src="lib/dot.js"></script>
+  <script type="text/javascript" src="lib/sound.js"></script>
   <script type="text/javascript" src="lib/game.js"></script>
   <script type="text/javascript" src="lib/main.js"></script>
 </body>
