--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           The controls are the arrows: raise, lower, left and right.</br>
           Use ctrl if you want the dot to stop moving.</br></br>
           P.S: Too easy for you? Click again in start game ;)</p>
-      <button id="start-button" class="btn">Start Game</button>
+      <div><button id="start-button" class="btn">Start Game</button></div>
+      <div><button id="reload-button" class="btn">Reload Game</button></div>
     </div>
   </div>
   <script type="text/javascript" src="lib/CONFIG.js"></script>
