feat: try bootstrap

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body>
   <div class= "container row justify-content-center">
-    <div id="game-board" class="col-md-4">
+    <div id="game-board" class="col-md-3">
       <canvas id="canvas" width="300px" height="534px"></canvas>
       <footer>credit background: Maria Grønlund, <a href="https://www.behance.net/gallery/9795093/I-speak-fluid-colors">I speak fluid colors</a></footer>
     </div>
-    <div class="col-md-4 intro">
+    <div class="col-md-1"></div>
+    <div class="col-md-5 intro">
       <h1>Move the falling dot</h1>
       <p>Dodge the bars that appear while the dot falls.</br>
           The controls are the arrows: raise, lower, left and right.</br>
